# d20-Game

./: CMakeLists.txt  README.md  optimizations.md
.archives/include/: MapBuilder.h  MapConcreteBuilder.h  MapDirector.h  Observer.h
.archives/saves/maps/: map1.txt  map1object.txt  test2.txt  test3.txt  test4.txt  test6.txt  test7.txt  test8.txt
.archives/src/: MapConcreteBuilder.cpp  MapDirector.cpp  MapEditor.cpp
campaigns/: campaign.txt  ctest.txt
include/Components/: Armor.h  Character.h  Equipment.h  Item.h  ItemBag.h  MapEditor.h  MapGeneration.h  Observable.h  Position.h  Potion.h  Subject.h  Weapon.h
include/Controller/: Combat.h  GameEngine.h  GameManager.h  ObjectEditor.h
include/Static/: Dice.h  Functions.h
maps/: map1.txt  test5.txt
saved/Campaign/: campaigns.txt
saved/Character/: enemies.txt  enemiesBackup.txt  players.txt
saved/Equipment/: equipments.txt
saved/Item/: armors.txt  items.txt  weapons.txt
saved/ItemBag/: itembags.txt
saved/Map/: maps.txt  mapsBackup.txt
src/: main.cpp
src/Components/: Armor.cpp  Character.cpp  Equipment.cpp  Item.cpp  ItemBag.cpp  MapBuilder.cpp  MapConcreteBuilder.cpp  MapEditor.cpp  MapGeneration.cpp  Observer.cpp  Potion.cpp  Subject.cpp  Weapon.cpp
src/Controller/: Combat.cpp  GameEngine.cpp  GameManager.cpp  ObjectEditor.cpp
src/Static/: Dice.cpp  Functions.cpp
